# rail_face_detection

./: CHANGELOG.rst  CMakeLists.txt  FaceHelper.py  README.md  face_detector.py  img_list.txt  old_stuff.py  package.xml  webcam_runner.py
launch/: detector.launch
msg/: Face.msg
rail_face_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_face_detection_launch/: CMakeLists.txt  README.md  package.xml
rail_face_detection_launch/launch/: face_detection.launch  wg_face_detector.launch
rail_face_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_face_detection_msgs/msg/: Detections.msg
rail_face_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rail_face_detector/launch/: detector.launch
rail_face_detector/scripts/: face_detector_node.py
rail_face_detector_msgs/: CMakeLists.txt  package.xml
scripts/: FaceHelper.py  detector_node.py  face_detector.py  face_detector_node.py
