<package>
  <name>rail_face_detector</name>
  <version>0.0.1</version>
  <description>
    This package provides face detection.
  </description>
  <maintainer email="asilva9@gatech.edu">Andrew Silva</maintainer>
  <url type="website">https://github.gatech.edu/asilva9/ros_faces</url>
  <license>MIT</license>
  <author>Andrew Silva</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>

</package>