<package format="2">
  <name>rail_face_detection_msgs</name>
  <version>1.0.1</version>
  <description>
    This package provides face detection.
  </description>
  <maintainer email="asilva9@gatech.edu">Andrew Silva</maintainer>
  <url type="website">https://github.com/GT-RAIL/rail_face_detector</url>
  <license>MIT</license>
  <author>Andrew Silva</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>


</package>
